--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "heroku": "^7.2.0",
+    "heroku": "7.x",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
